sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:5: error: not found: value echanges
  while(echanges==true){
        ^AlgBubbleSort2:6: error: not found: value echanges
   echanges=false;
   ^AlgBubbleSort2:10: error: not found: value echanges
        echanges=true;
        ^