sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var echange:Boolean=true

  while(echanges==true){
   echanges=false;
   for(i<-getValueCount()-2 to 0){
    for(j<-0 to i){
      if(isSmaller(j+1,j)){
        echanges=true;
        swap(j,j+1);
      	}
    	}
  	}
	}
}
